--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -56,6 +56,12 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-14(v3.0.6)
+          <ul>
+            <li>新しい駅：<var>汉川</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-06(v3.0.5)
           <ul>
             <li>ファイル名前は <code>2021b</code> にする</li>
