--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -70,7 +70,7 @@
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
         <tr><td>2</td><td>郑州</td><td>43</td><td>55</td></tr>
-        <tr><td>3</td><td>长春</td><td>38</td><td>40</td></tr>
+        <tr><td>3</td><td>长春</td><td>43</td><td>45</td></tr>
         <tr><td>4</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>5</td><td>杭州东</td><td>31</td><td>36</td></tr>
         <tr><td>6</td><td>兰州</td><td>29</td><td>36</td></tr>
@@ -111,16 +111,18 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-14(v3.0.6)
+          <ul>
+            <li>新增车站：<var>汉川</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-06(v3.0.5)
           <ul>
             <li>更改版本为<code>2021b</code></li>
           </ul>
+          ……
         </li>
-        <li class="list-group-item">
-          2021-08-30(v3.0.4)
-          <ul>
-            <li>新增车站：<var>农安</var>、<var>平旺</var></li>
-          </ul>
         </li>
         <li class="list-group-item">
           2021-07-31(v3.0.0)
