--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,12 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-03-27(v3.3.3)
+          <ul>
+            <li>データを更新。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-03-13(v3.3.2)
           <ul>
             <li>新しい駅：<var>郏県</var>、<var>長葛</var>、<var>長葛北</var></li>
