--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -40,7 +40,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2022a2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年2月19日版本</a></p>
+    <p><a href="./tktMach2022b2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年3月27日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
   </div>
   <div class="container">
@@ -71,7 +71,7 @@
         <tr><td>2</td><td>郑州东</td><td>47</td><td>62</td></tr>
         <tr><td>3</td><td>郑州</td><td>45</td><td>57</td></tr>
         <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
-        <tr><td>5</td><td>南京南</td><td>35</td><td>38 (↑)</td></tr>
+        <tr><td>5</td><td>南京南</td><td>35</td><td>38</td></tr>
         <tr><td>6</td><td>杭州东</td><td>31</td><td>37</td></tr>
         <tr><td>7</td><td>兰州</td><td>30</td><td>40</td></tr>
         <tr><td>8</td><td>福州</td><td>27</td><td>34</td></tr>
@@ -110,9 +110,9 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2022-03-13(v3.3.2)
+          2022-03-27(v3.3.3)
           <ul>
-            <li>新增车站：<var>郏县</var>、<var>长葛</var>、<var>长葛北</var></li>
+            <li>常规更新。</li>
           </ul>
         </li>
         <li class="list-group-item">
