--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-04-24(v3.4.0)
+          <ul>
+            <li>常规更新。修复了部分错误的提示。</li>
+            <li>更改文件名版本号为<code>2022c</code></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-03-27(v3.3.3)
           <ul>
             <li>常规更新。</li>
