--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
               <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
               <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
             </a></p>
-            <p><a href="/rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (Multi-language)</a></p>
-            <p><a href="/rail/tktMach2022a2.mdx">运转大数据 Mdict 下载 (Chinese)</a> <a href="/rail/tktMach2022a2.ja.mdx">運転マスデータ (日本語)</a></p>
+            <p><a href="/rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (中文 / 日本語 / English)</a></p>
+            <p><a href="/rail/tktMach2022c2.mdx">运转大数据 Mdict 下载 (Chinese)</a> <a href="/rail/tktMach2022c2.ja.mdx">運転マスデータ Mdict (日本語)</a></p>
           </article>
         </div>
       </div>
@@ -83,7 +83,6 @@
     </div>
     <div class="current-section">
       <a href="#top">Scroll to top</a>
-      <a href="https://github.com/clzls/clzls.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/clzls/clzls.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
       <p class="name"></p>
     </div>
   </body>
