--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" href="stylesheets/github-dark.css" />
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/script.js"></script>
 
     <title>clzls.GitHub.io</title>
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js" />
+      <script src="https://cdn.staticfile.org/html5shiv/3.7.3/html5shiv.min.js"></script>
       <style>
         header,nav, section,article,footer
         {border:1px solid grey; margin:5px; padding:8px;}
