--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,12 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-07-17(v3.4.4)
+          <ul>
+            <li>新增车站：<var>淮阳南</var>、<var>沈丘北</var>、<var>周口</var>、<var>周口东</var>。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-07-03(v3.4.3)
           <ul>
             <li>新增车站：<var>奉节</var>、<var>焦作西</var>、<var>临河</var>、<var>宁陵县</var>、<var>濮阳东</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>郑州航空港</var>。</li>
