--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -68,11 +68,11 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>长春</td><td>54</td><td>63</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>47</td><td>65</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>48</td><td>66</td></tr>
         <tr><td>3</td><td>郑州</td><td>46</td><td>59</td></tr>
-        <tr><td>4</td><td>南京南</td><td>40</td><td>43</td></tr>
+        <tr><td>4</td><td>南京南</td><td>41</td><td>44</td></tr>
         <tr><td>5</td><td>北京南</td><td>38</td><td>42</td></tr>
-        <tr><td>6</td><td>杭州东</td><td>31</td><td>37</td></tr>
+        <tr><td>6</td><td>杭州东</td><td>32</td><td>38</td></tr>
         <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
         <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
         <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
@@ -110,6 +110,12 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-07-17(v3.4.4)
+          <ul>
+            <li>新增车站：<var>淮阳南</var>、<var>沈丘北</var>、<var>周口</var>、<var>周口东</var>。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-07-03(v3.4.3)
           <ul>
             <li>新增车站：<var>奉节</var>、<var>焦作西</var>、<var>临河</var>、<var>宁陵县</var>、<var>濮阳东</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>郑州航空港</var>。</li>
