--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -413,6 +413,10 @@
         </details>
       </div>
       <div class="form-group">
+        <label for="machbrand">机器厂商：（选填）</label>
+        <input type="text" class="form-control" id="machbrand" placeholder="铁科院" size="32" maxlength="32" title="请输入机器的生产厂商。">
+      </div>
+      <div class="form-group">
         <label for="tktdesc">其他描述:</label>
         <input type="text" class="form-control" id="tktdesc" placeholder="票面广告，背面字体等" size="100" maxlength="100" title="请输入对车票的其他描述。">
       </div>
